--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@openrouter/ai-sdk-provider": "^1.2.6",
     "@prisma/client": "^7.0.1",
     "groq-sdk": "^0.36.0",
     "lucide-react": "^0.554.0",
