--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^1.2.6",
+    "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
-    "groq-sdk": "^0.36.0",
+    "@prisma/extension-accelerate": "^3.0.0",
+    "ai": "^5.0.103",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zustand": "^5.0.8"
@@ -22,6 +25,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.5.5",
