--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "anti-umbrella",
+  "name": "umbrella",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "postinstall": "prisma generate"
   },
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^1.2.6",
+    "@prisma/adapter-better-sqlite3": "^7.0.1",
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
     "@prisma/extension-accelerate": "^3.0.0",
     "ai": "^5.0.103",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
     "pg": "^8.16.3",
@@ -24,14 +28,16 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^20.19.25",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.8.32",
     "daisyui": "^5.5.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
-    "prisma": "^7.0.1",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
