--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/extension-accelerate": "^3.0.0",
     "ai": "^5.0.103",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
     "pg": "^8.16.3",
