--- a/package.json
+++ b/package.json
@@ -15,30 +15,36 @@
     "@openrouter/ai-sdk-provider": "^1.2.6",
     "@prisma/adapter-better-sqlite3": "^7.0.1",
     "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "6.19.0",
     "@prisma/extension-accelerate": "^3.0.0",
     "ai": "^5.0.103",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
+    "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.19.25",
     "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "baseline-browser-mapping": "^2.8.32",
     "daisyui": "^5.5.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
-    "prisma": "^6.19.0",
+    "prisma": "6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
