--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "build:css": "postcss app.css -o public/output.css"
   },
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^1.2.6",
@@ -17,6 +18,7 @@
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "6.19.0",
     "@prisma/extension-accelerate": "^3.0.0",
+    "@tailwindcss/vite": "^4.1.17",
     "ai": "^5.0.103",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
@@ -25,6 +27,8 @@
     "next": "16.0.4",
     "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "uuid": "^13.0.0",
@@ -32,7 +36,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.19.25",
@@ -45,7 +49,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
     "prisma": "6.19.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
