--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-cli": "^11.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "resend": "^6.5.2",
     "uuid": "^13.0.0",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
