--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "resend": "^6.5.2",
     "uuid": "^13.0.0",
     "zod": "^4.1.13",
