feat: integrate Prisma ORM and add NextAuth secret to example environment variables

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ DATABASE_URL="xxx"
 # https://openrouter.ai/docs/guides/community/vercel-ai-sdk
 # https://openrouter.ai/x-ai/grok-4.1-fast:free/api
 OPENROUTER_API_KEY="xxx"
+
+# Next Auth Secret (Required for production)
+# Generate with: npx auth secret
+AUTH_SECRET="xxx"
