feat: Implement core application pages, settings management, and profile features with comprehensive testing infrastructure

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "postinstall": "prisma generate",
-    "build:css": "postcss app.css -o public/output.css"
+    "build:css": "postcss app.css -o public/output.css",
+    "test": "vitest run",
+    "predeploy": "npm run test && npx playwright test"
   },
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^1.2.6",
     "@prisma/adapter-better-sqlite3": "^7.0.1",
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "6.19.0",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^6.19.0",
     "@prisma/extension-accelerate": "^3.0.0",
     "@tailwindcss/vite": "^4.1.17",
     "ai": "^5.0.103",
@@ -37,7 +39,12 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.19.25",
@@ -49,8 +56,12 @@
     "daisyui": "^5.5.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
-    "prisma": "6.19.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "jsdom": "^27.2.0",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4.1.17",
-    "typescript": "^5"
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
   }
 }
