--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "prebuild": "npm run test",
+    "build": "npm run build:css && next build",
     "start": "next start",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "postinstall": "prisma generate",
-    "build:css": "postcss app.css -o public/output.css",
+    "build:css": "postcss \"src/**/*.css\" -o public/output.css",
     "test": "vitest run",
     "predeploy": "npm run test && npx playwright test"
   },
